[tool.poetry]
name = "amsr-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "amsr_project"}]

[tool.poetry.dependencies]
python = "^3.11"
pycryptodome = "^3.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
